Implement link generation UI in App component

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
    
-    <title>speedy-links</title>
+    <title>Speedy-Links</title>
   </head>
   <body>
    
     <div id="root"></div>
-   
+  
   </body>
 </html>
